--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "node server.js",
     "dev:next": "next dev -H 0.0.0.0",
     "build": "next build",
+    "build:pages": "next build && node scripts/prepare-pages.js",
     "start": "NODE_ENV=production node server.js",
     "start:next": "next start -H 0.0.0.0",
     "lint": "next lint",
@@ -19,8 +20,10 @@
     "dist": "npm run build && electron-builder --publish=never",
     "tunnel:setup": "cloudflared tunnel create music-player",
     "tunnel:start": "cloudflared tunnel run music-player",
+    "tunnel:auto": "node scripts/auto-tunnel.js",
     "tunnel:install": "cloudflared service install",
     "dev:tunnel": "concurrently \"npm run dev\" \"npm run tunnel:start\"",
+    "start:all": "concurrently --kill-others \"npm run dev\" \"npm run tunnel:auto\"",
     "pwa:icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
