--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "node server.js",
     "dev:next": "next dev -H 0.0.0.0",
-    "build": "next build",
-    "build:pages": "next build && node scripts/prepare-pages.js",
+    "build": "prisma generate && next build",
+    "build:pages": "prisma generate && next build && node scripts/prepare-pages.js",
+    "postinstall": "prisma generate",
     "start": "NODE_ENV=production node server.js",
     "start:next": "next start -H 0.0.0.0",
     "lint": "next lint",
