Add email notification for tunnel URL

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 # 音楽ライブラリパス
 MUSIC_LIBRARY_PATH=C:/Music
+
+# メール送信設定（トンネルURL通知用）
+EMAIL_USER=your-gmail@gmail.com
+EMAIL_PASS=your-app-password-here
+TUNNEL_EMAIL=kenta4126.2201@gmail.com
