--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "music-metadata": "^9.0.1",
     "next": "^14.2.0",
     "next-auth": "^4.24.7",
+    "nodemailer": "^7.0.13",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@types/react-window": "^1.8.8",
