--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "@types/multer": "^1.4.12",
     "chokidar": "^3.6.0",
+    "dotenv": "^17.2.4",
     "electron-store": "^8.2.0",
     "framer-motion": "^12.31.0",
     "lucide-react": "^0.563.0",
